--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -8,7 +8,36 @@
     <!-- transition-all duration-300 transform translate-y-full -->
     <p>{{ item.overview }}</p>
   </div>
-
+  <div
+    class="absolute flex justify-center items-center right-2 top-2 opacity-90"
+  >
+    <img
+      class="w-8 h-8"
+      id="mi-boton"
+      name="miBtn"
+      src="assets\img\mas (1).png"
+      (click)="toggleList()"
+      alt=""
+    />
+    <ul
+      class="bg-[#697482] text-white rounded transform absolute top-0.5 right-0.5 transition duration-150 ease-in-out origin-top min-w-32 w-36"
+      id="mi-ul"
+      [hidden]="this.listaVisible"
+      (click)="$event.stopPropagation()"
+    >
+      <li
+        class="px-2 py-0.5 hover:text-black font-medium flex items-center"
+        (click)="like()"
+      >
+        <img class="h-4 w-4" src="assets\img\me-gusta_blanco.png" alt="" />
+        <p class="ml-2">Favoritos</p>
+      </li>
+      <li class="px-2 py-0.5 hover:text-black font-medium flex items-center">
+        <img class="h-4 w-4" src="assets\img\pendiente.png" alt="" />
+        <p class="ml-2">Pendiente</p>
+      </li>
+    </ul>
+  </div>
   <img
     class="w-45 h-76 sm:w-54 sm:h-82 md:w-64 md:h-96 md:max-h-96 rounded-t-lg"
     src="https://image.tmdb.org/t/p/w500{{ item.poster_path }}"
@@ -18,10 +47,29 @@
     <h2 class="font-bold text-lg text-white">{{ item.title }}</h2>
     <div class="flex justify-between items-center pr-2">
       <h3 class="text-sm text-white">{{ darFormato(item.release_date) }}</h3>
-      <div
-        class="bg-green-500 rounded-full w-8 h-8 flex items-center justify-center"
-      >
-        <span class="text-white text-sm">{{ item.vote_average }}</span>
+      <div class="flex items-center">
+        <div *ngIf="this.fireService.userData != null">
+          <img
+            class="w-8 h-8"
+            *ngIf="item.liked"
+            (click)="like()"
+            src="assets\img\me-gusta_relleno.png"
+            alt=""
+          />
+
+          <img
+            class="w-8 h-8"
+            *ngIf="!item.liked"
+            src="assets\img\me-gusta.png"
+            alt=""
+            (click)="like()"
+          />
+        </div>
+        <div
+          class="bg-green-500 rounded-full w-8 h-8 flex items-center justify-center ml-2"
+        >
+          <span class="text-white text-sm">{{ item.vote_average }}</span>
+        </div>
       </div>
       <!-- <div
         class="relative flex items-center justify-center bg-cyan-900 h-11 w-11 rounded-full"
