--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,40 +1,52 @@
-<div class="w-2/4 mx-auto flex flex-col mt-10 rounded-lg bg-[#113149]">
+<div class="flex justify-center items-center mt-5 font-serif">
+  <img class="w-12" src="assets\img\video_grande.png" alt="" />
+  <h1 class="text-5xl ml-3 text-white font-semibold opacity-95">MisPelis</h1>
+</div>
+<div
+  class="w-3/4 sm:w-2/4 lg:w-1/3 mx-auto flex flex-col mt-10 rounded-lg bg-[#113149]"
+>
   <div>
-    <h1 class="text-5xl text-center mt-5 text-white">Login</h1>
+    <h1 class="text-5xl text-center mt-5 text-white font-semibold">Login</h1>
   </div>
   <form
     class="w-10/12 mt-10 mx-auto mb-4 flex flex-col"
     [formGroup]="formUser"
-    (ngSubmit)="procesar()"
+    (ngSubmit)="this.fireService.login(email.value, contra.value)"
   >
-    <label class="text-white">Email</label>
+    <label class="text-white">Correo electronico</label>
     <input
       class="border border-black px-2 mt-2 py-2 rounded-lg placeholder:pl-2 placeholder:px-2"
       type="email"
       formControlName="email"
-      placeholder="Escribe tu email"
     />
-
+    <div
+      class="border border-gray-800 py-2 px-2 bg-red-500 items-center mt-2 rounded-lg opacity-80"
+      [hidden]="!this.fireService.errorLogin"
+    >
+      Usuario o contraseñas incorrectos.
+    </div>
     <div
       class="border border-gray-800 py-2 px-2 bg-red-500 items-center mt-2 rounded-lg opacity-80"
       [hidden]="email.valid || email.pristine"
     >
-      <span *ngIf="email.errors?.['required']">El email es obligatorio</span>
       <span *ngIf="email.errors?.['email']">El email es incorrecto</span>
     </div>
 
     <label class="text-white mt-2">Contraseña</label>
-    <input
-      class="border px-2 border-black mt-2 py-2 rounded-lg placeholder:pl-2 placeholder:px-2"
-      type="text"
-      formControlName="name"
-      placeholder="Escribe la contraseña"
-    />
-    <div
-      class="border border-gray-800 py-2 px-2 bg-red-500 items-center mt-2 rounded-lg opacity-80"
-      [hidden]="name.valid || name.pristine"
-    >
-      La contraseña es obligatorio
+    <div class="w-full relative">
+      <input
+        class="border px-2 w-full border-black mt-2 py-2 rounded-lg placeholder:pl-2 placeholder:px-2"
+        type="{{ isPasswordVisible ? 'text' : 'password' }}"
+        [formControl]="contra"
+        formControlName="contra"
+      />
+
+      <img
+        class="absolute right-3 top-4 h-6 w-6"
+        src="assets\img\ojo.png"
+        alt=""
+        (click)="togglePasswordVisibility()"
+      />
     </div>
 
     <div class="flex flex-col items-center justify-center">
@@ -44,9 +56,9 @@
       >
         Login
       </button>
-      <div class="flex">
+      <div class="flex flex-wrap mx-auto justify-center items-center">
         <div
-          class="flex bg-white w-36 font-semibold px-2 py-2 rounded-lg hover:bg-gray-300 mt-3.5 items-center mr-1"
+          class="flex bg-white w-36 font-semibold px-2 py-2 rounded-lg hover:bg-gray-300 mt-3.5 items-center md:mr-1"
           href="#"
           (click)="this.fireService.loginGoogle()"
         >
@@ -55,7 +67,7 @@
         </div>
 
         <div
-          class="flex bg-white w-36 font-semibold px-2 py-2 rounded-lg hover:bg-gray-300 mt-3.5 items-center justify-center ml-1"
+          class="flex bg-white w-36 font-semibold px-2 py-2 rounded-lg hover:bg-gray-300 mt-3.5 items-center justify-center md:ml-1"
           href="#"
           (click)="goRegistro()"
         >
