--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full bg-gradient-to-l from-cyan-900 via-sky-800 to-cyan-900 mb-10"
+  class="w-full bg-gradient-to-l from-[#18242a] via-[#304954] to-[#18242a] mb-10"
 >
   <app-navbar></app-navbar>
   <!-- <app-footer></app-footer> -->
@@ -7,7 +7,7 @@
   <app-panel-peliculas></app-panel-peliculas>
 
   <button
-    class="fixed bottom-4 right-4 p-2 rounded-full bg-gray-700 text-white hover:bg-gray-800"
+    class="fixed bottom-4 right-4 p-2 rounded-full bg-gray-600 text-white hover:bg-gray-500"
     *ngIf="showButton"
     (click)="scrollToTop()"
   >
