--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,9 +1,9 @@
 <div
   *ngIf="item.poster_path != undefined"
-  class="flex flex-col mx-5 my-4 w-45 sm:w-54 md:w-64 shadow-2xl rounded-lg bg-[#113149] hover:bg-[#28455A] relative"
+  class="flex flex-col mx-5 my-4 w-44 sm:w-54 md:w-48 h-76 shadow-2xl rounded-lg bg-[#113149] hover:bg-[#28455A] relative"
 >
   <div
-    class="p-2 h-72 sm:h-82 md:h-96 absolute top-0 left-0 opacity-0 hover:opacity-100 bg-[#113149] bg-opacity-90 text-white overflow-auto rounded-t-lg"
+    class="p-2 h-72 sm:h-82 md:h-72 absolute top-0 left-0 opacity-0 hover:opacity-100 bg-[#113149] bg-opacity-90 text-white overflow-auto rounded-t-lg"
   >
     <!-- transition-all duration-300 transform translate-y-full -->
     <p>{{ item.overview }}</p>
@@ -29,31 +29,53 @@
         class="px-2 py-0.5 hover:text-black font-medium flex items-center"
         (click)="like()"
       >
-        <img class="h-4 w-4" src="assets\img\me-gusta_blanco.png" alt="" />
+        <img
+          *ngIf="!this.item.liked"
+          class="h-4 w-4"
+          src="assets\img\me-gusta_blanco.png"
+          alt=""
+        />
+        <img
+          *ngIf="this.item.liked"
+          class="h-4 w-4"
+          src="assets\img\me-gusta_negro.png"
+          alt=""
+        />
         <p class="ml-2">Favoritos</p>
       </li>
       <li
         class="px-2 py-0.5 hover:text-black font-medium flex items-center"
         (click)="ponerPendiente()"
       >
-        <img class="h-4 w-4" src="assets\img\pendiente.png" alt="" />
+        <img
+          *ngIf="!this.item.pending"
+          class="h-4 w-4"
+          src="assets\img\pendiente.png"
+          alt=""
+        />
+        <img
+          *ngIf="this.item.pending"
+          class="h-4 w-4"
+          src="assets\img\pending.png"
+          alt=""
+        />
         <p class="ml-2">Pendiente</p>
       </li>
     </ul>
   </div>
   <img
-    class="w-45 h-76 sm:w-54 sm:h-82 md:w-64 md:h-96 md:max-h-96 rounded-t-lg"
+    class="w-48 h-76 rounded-t-lg"
     src="https://image.tmdb.org/t/p/w500{{ item.poster_path }}"
     alt=""
   />
   <div class="px-2 py-2 flex flex-col h-36 justify-around">
-    <h2 class="font-bold text-lg text-white">{{ item.title }}</h2>
+    <h2 class="font-semibold text-lg text-white">{{ item.title }}</h2>
     <div class="flex justify-between items-center pr-2">
       <h3 class="text-sm text-white">{{ darFormato(item.release_date) }}</h3>
       <div class="flex items-center">
         <div *ngIf="this.fireService.userData != null">
           <img
-            class="w-8 h-8"
+            class="w-6 h-6"
             *ngIf="item.liked"
             (click)="like()"
             src="assets\img\me-gusta_relleno.png"
@@ -61,17 +83,25 @@
           />
 
           <img
-            class="w-8 h-8"
+            class="w-6 h-6"
             *ngIf="!item.liked"
-            src="assets\img\me-gusta.png"
+            src="assets\img\me-gusta_vacio.png"
             alt=""
             (click)="like()"
           />
         </div>
         <div
-          class="bg-green-500 rounded-full w-8 h-8 flex items-center justify-center ml-2"
+          [ngClass]="{
+            'bg-red-600': item.vote_average! < 5,
+            'bg-yellow-600':
+              item.vote_average! >= 5 && item.vote_average! < 6.5,
+            'bg-green-500': item.vote_average! >= 6.5
+          }"
+          class="rounded-full w-7 h-7 flex items-center justify-center ml-2"
         >
-          <span class="text-white text-sm">{{ item.vote_average }}</span>
+          <span class="text-white text-sm">{{
+            item.vote_average!.toFixed(1)
+          }}</span>
         </div>
       </div>
       <!-- <div
