--- a/src/styles.css
+++ b/src/styles.css
@@ -9,10 +9,10 @@
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #0a2630;
+    background-color: #304954;
     border-radius: 4px;
   }
   
   ::-webkit-scrollbar-track {
-    background-color: #114456;
+    background-color: #18242a;
   }
