--- a/src/app/components/panel-peliculas/panel-peliculas.component.html
+++ b/src/app/components/panel-peliculas/panel-peliculas.component.html
@@ -13,7 +13,7 @@
           *ngIf="MoviesService.allMovies.length == 0"
           class="text-white font-semibold text-3xl"
         >
-          No existen peliculas
+          No existen películas
         </h1>
       </div>
     </div>
