--- a/src/app/components/barra-busqueda/barra-busqueda.component.html
+++ b/src/app/components/barra-busqueda/barra-busqueda.component.html
@@ -12,16 +12,16 @@
       <input
         #temp
         (input)="buscarPelis(temp.value)"
-        class="rounded border-gray-600 placeholder:text-gray-900 pl-2 h-12 mb-2 md:mb-0"
+        class="rounded placeholder:text-white text-white bg-transparent pl-2 h-12 mb-2 md:mb-0 border border-white"
         type="text"
         placeholder="Buscar película"
       />
       <div class="group sm:ml-6 w-44">
         <!-- Boton de categorias con su lista con todos los generos -->
         <button
-          class="outline-none focus:outline-none border px-3 py-1 border-gray-600 rounded flex justify-between items-center min-w-32 h-12 w-44 bg-white"
+          class="outline-none focus:outline-none border px-3 py-1 text-white border-white rounded flex justify-between items-center min-w-32 h-12 w-44 bg-transparent"
         >
-          <span class="pr-1 flex text-gray-900">Géneros</span>
+          <span class="pr-1 flex text-white">Géneros</span>
           <span>
             <svg
               class="fill-current h-5 w-5 transform group-hover:-rotate-180 transition duration-150 ease-in-out"
@@ -36,12 +36,12 @@
         </button>
         <ul
           id="Generos"
-          class="bg-white border rounded-sm transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32 w-44 z-50"
+          class="bg-[#18242a] text-white rounded rounded-b-lg transform scale-0 group-hover:scale-100 absolute transition duration-150 ease-in-out origin-top min-w-32 w-44 z-50"
         >
           <li
             id="borrarTodos"
             *ngIf="MoviesService.listaGeneros.length >= 2"
-            class="rounded-sm px-3 py-1 hover:bg-gray-100 flex justify-between"
+            class="rounded-sm px-3 py-1 hover:bg-[#304954] flex justify-between"
             (click)="borrarTodos()"
           >
             Borrar todos
@@ -49,7 +49,7 @@
           </li>
 
           <li
-            class="rounded-sm px-3 py-1 hover:bg-gray-100 flex justify-between items-center"
+            class="rounded-sm px-3 py-1 hover:bg-[#304954] flex justify-between items-center"
             *ngFor="let genero of MoviesService.generos"
             (click)="buscarPorGenero(genero)"
           >
