--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,19 @@
-<div class="flex justify-center items-center mt-5 font-serif">
+<a class="flex justify-center items-center mt-5 font-serif" routerLink="/">
   <img class="w-12" src="assets\img\video_grande.png" alt="" />
   <h1 class="text-5xl ml-3 text-white font-semibold opacity-95">MisPelis</h1>
-</div>
+</a>
 <div
-  class="w-3/4 sm:w-2/4 lg:w-1/3 mx-auto flex flex-col mt-10 rounded-lg bg-[#113149]"
+  class="w-3/4 sm:w-2/4 lg:w-1/3 mx-auto flex flex-col mt-10 rounded-lg bg-[#18242a]"
 >
   <div>
-    <h1 class="text-5xl text-center mt-5 text-white font-semibold">Login</h1>
+    <h1 class="text-5xl text-center mt-5 text-white font-semibold">Log in</h1>
   </div>
   <form
     class="w-10/12 mt-10 mx-auto mb-4 flex flex-col"
     [formGroup]="formUser"
     (ngSubmit)="this.fireService.login(email.value, contra.value)"
   >
-    <label class="text-white">Correo electronico</label>
+    <label class="text-white">Correo electrónico</label>
     <input
       class="border border-black px-2 mt-2 py-2 rounded-lg placeholder:pl-2 placeholder:px-2"
       type="email"
@@ -54,7 +54,7 @@
         class="mt-4 px-2 py-2 flex justify-center items-center border border-gray-500 font-semibold text-black disabled:bg-gray-400 bg-white w-36 rounded-lg"
         [disabled]="formUser.invalid"
       >
-        Login
+        Log in
       </button>
       <div class="flex flex-wrap mx-auto justify-center items-center">
         <div
