--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,9 +1,9 @@
-<div class="flex justify-center items-center mt-5 font-serif">
+<a class="flex justify-center items-center mt-5 font-serif" routerLink="/">
   <img class="w-12" src="assets\img\video_grande.png" alt="" />
   <h1 class="text-5xl ml-3 text-white font-semibold opacity-95">MisPelis</h1>
-</div>
+</a>
 <div
-  class="w-3/4 sm:w-2/4 lg:w-1/3 mx-auto flex flex-col mt-10 rounded-lg bg-[#113149]"
+  class="w-3/4 sm:w-2/4 lg:w-1/3 mx-auto flex flex-col mt-10 rounded-lg bg-[#18242a]"
 >
   <div>
     <h1 class="text-5xl text-center mt-5 text-white font-semibold">Registro</h1>
@@ -57,7 +57,7 @@
       La contraseña debe tener 5 numeros, 1 letra y 1 caracter especial.
     </div>
 
-    <label class="text-white mt-2">Repite la contraseña</label>
+    <label class="text-white mt-2">Confirma tu contraseña</label>
     <div class="w-full relative">
       <input
         class="border px-2 w-full border-black mt-2 py-2 rounded-lg placeholder:pl-2 placeholder:px-2"
