Deploy en vercel

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,7 @@
         class="text-2xl text-white flex items-center font-bold font-serif"
         href="#"
       >
-        <img
-          class="w-10 h-10 mr-2"
-          src="assets/img/video_grande.png"
-        />MisPelis###
+        <img class="w-10 h-10 mr-2" src="assets/img/video_grande.png" />MisPelis
       </a>
     </div>
 
